fix composer description

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "vinadmin/wco",
-    "description": "Web optimization coding framework",
+    "description": "Web coding optimization framework",
     "homepage": "https://www.texnoblog.uz/",
     "type": "library",
     "license": "MIT",
