--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "wco\\": "kernel/",
-            "wco\\db\\": "db/DB.php"
+            "wco\\": "kernel/"
         }
     },
     "authors": [
