--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "wco\\": "/kernel"
+            "wco\\": "kernel"
         }
     },
     "authors": [
@@ -16,6 +16,5 @@
         }
     ],
     "minimum-stability": "dev",
-    "virsion": "0.0.1",
     "require": {}
 }
