--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "autoload": {
         "psr-4": {
             "wco\\kernel\\": "kernel/",
-            "wco\\db\\": "db/DB.php"
+            "wco\\db\\": "db/"
         }
     },
     "authors": [
