--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "autoload": {
         "psr-4": {
             "wco\\kernel\\": "kernel/",
-            "wco\\db\\": "db/"
+            "wco\\db\\": "db/",
+            "wco\\forms\\": "Form/"
         }
     },
     "authors": [
