update composer json file

--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,8 @@
             "email": "ovvitalik@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
-    	"php": ">=7.3"
+    	"php": "^7.3"
     },
     "extra": {
         "branch-alias": {
